runtime/tests/cases/variables/errors/temp_shadows_save.bobbin
save name = "Alice"
temp name = "Bob"
Hello, {name}!
